--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,63 @@
-matplotlib==3.9.2
-numpy==2.1.2
-seaborn==0.13.2
-pymoo==0.6.1.3
+about-time==4.2.1
+alive-progress==3.1.5
+altair==5.4.1
 anytree==2.12.1
+attrs==24.2.0
+autograd==1.7.0
+blinker==1.9.0
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+cma==3.2.2
+contourpy==1.3.0
+cycler==0.12.1
+debugpy==1.8.7
+Deprecated==1.2.14
+dill==0.3.9
+fonttools==4.54.1
+gitdb==4.0.11
+GitPython==3.1.43
+grapheme==0.6.0
+graphviz==0.20.3
+idna==3.10
+Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+kiwisolver==1.4.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.9.2
+mdurl==0.1.2
+narwhals==1.14.0
+numpy==2.1.2
+opencv-python==4.10.0.84
+packaging==24.1
+pandas==2.2.3
+pillow==11.0.0
+plotly==5.24.1
+protobuf==5.28.3
+pyarrow==18.0.0
+pydeck==0.9.1
+Pygments==2.18.0
+pymoo==0.6.1.3
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+referencing==0.35.1
+requests==2.32.3
+rich==13.9.4
+rpds-py==0.21.0
+scipy==1.14.1
+seaborn==0.13.2
+six==1.16.0
+smmap==5.0.1
+streamlit==1.40.1
+tenacity==9.0.0
+toml==0.10.2
+tornado==6.4.1
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+watchdog==6.0.0
+wrapt==1.16.0
