--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ matplotlib==3.9.2
 mdurl==0.1.2
 narwhals==1.14.0
 numpy==2.1.2
-opencv-python==4.10.0.84
+opencv-python-headless==4.10.0.84
 packaging==24.1
 pandas==2.2.3
 pillow==11.0.0
